tests/missing_fmt.stderr
error: requires at least a format string argument
 --> tests/missing_fmt.rs:3:1
  |
3 | #[context]
  | ^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the attribute macro `context` (in Nightly builds, run with -Z macro-backtrace for more info)
